--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
